--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "angular-responsive-carousel": "^2.1.0",
     "bootstrap": "^5.0.1",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
