--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~12.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "bootstrap": "^5.0.1",
+    "moment": "^2.29.1",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
