--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "~12.0.0",
     "@angular/compiler": "~12.0.0",
     "@angular/core": "~12.0.0",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.0.0",
     "@angular/localize": "~12.0.0",
     "@angular/platform-browser": "~12.0.0",
@@ -21,6 +22,7 @@
     "@angular/router": "~12.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "bootstrap": "^5.0.1",
+    "firebase": "^8.6.8",
     "moment": "^2.29.1",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
