--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "angular-responsive-carousel": "^2.1.1",
     "bootstrap": "^5.0.1",
     "firebase": "^8.6.8",
     "moment": "^2.29.1",
