--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "@types/d3": "^7.0.0",
     "bootstrap": "^5.0.1",
+    "d3": "^7.0.0",
     "firebase": "^8.6.8",
     "moment": "^2.29.1",
     "ngx-bootstrap": "^6.2.0",
