implemented functionality for sign up, sign in and logout

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-responsive-carousel": "^2.1.1",
     "bootstrap": "^5.0.1",
     "firebase": "^8.6.8",
+    "jasmine": "^3.8.0",
     "moment": "^2.29.1",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
